--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,101 +1,112 @@
-
 <!-- footer start -->
 <footer class="footer-light">
   <div class="light-layout">
-      <div class="container">
-          <section class="small-section border-section border-top-0">
-              <div class="row">
-                  <div class="col-lg-6">
-                      <div class="subscribe">
-                          <div>
-                              <h4>Abonnez vous à la Newsletter pour nous suivre </h4>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-lg-6">
-                      <form action="https://pixelstrap.us19.list-manage.com/subscribe/post?u=5a128856334b598b395f1fc9b&amp;id=082f74cbda" class="form-inline subscribe-form auth-form needs-validation" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
-                          <div class="form-group mx-sm-3">
-                              <input type="text" class="form-control" name="EMAIL" id="mce-EMAIL" placeholder="Votre email" required="required">
-                          </div>
-                          <button type="submit" class="btn btn-solid" id="mc-submit">S'inscrire</button>
-                      </form>
-                  </div>
+    <div class="container">
+      <section class="small-section border-section border-top-0">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="subscribe">
+              <div>
+                <h4>Inscrivez vous à notre NewsLetter !</h4>
               </div>
-          </section>
-      </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <form
+              action="https://pixelstrap.us19.list-manage.com/subscribe/post?u=5a128856334b598b395f1fc9b&amp;id=082f74cbda"
+              class="form-inline subscribe-form auth-form needs-validation" method="post"
+              id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank">
+              <div class="form-group mx-sm-3">
+                <input type="text" class="form-control" name="EMAIL" id="mce-EMAIL" placeholder="Votre email"
+                  required="required" />
+              </div>
+              <button type="submit" class="btn btn-solid" id="mc-submit">
+                S'inscrire
+              </button>
+            </form>            
+          </div>
+        </div>
+      </section>
+    </div>
   </div>
   <section class="section-b-space light-layout">
-      <div class="container">
-          <div class="row footer-theme partition-f">
-              <div class="col-lg-3 col-md-3">
-                  <div class="footer-title footer-mobile-title">
-                      <h4>A propos</h4></div>
-                  <div class="footer-contant">
-                      <div class="footer-logo"><img src="../assets/images/icon/logo.png" alt=""></div>
-                      <p>Réveillez vos sens !</p>
-                      <div class="footer-social">
-                          <ul>
-                              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                              <li><a href="#"><i class="fa fa-rss" aria-hidden="true"></i></a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-              <div class="col offset-xl-1">
-                  <div class="sub-title">
-                      <div class="footer-title">
-                          <h4>Nos Guides</h4></div>
-                      <div class="footer-contant">
-                          <ul>
-                              <li><a href="#">Bien préparer son thé</a></li>
-                              <li><a href="#">Un café adapté à vos besoins</a></li>
-                              <li><a href="#">Ne pas mélanger les deux ! </a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="sub-title">
-                      <div class="footer-title">
-                          <h4>Informations</h4></div>
-                      <div class="footer-contant">
-                          <ul>
-                              <li><a href="#">Envois & Retours</a></li>
-                              <li><a href="#">Sécurité des données</a></li>
-                              <li><a href="#">Nos producteurs</a></li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="sub-title">
-                      <div class="footer-title">
-                          <h4>Contact</h4></div>
-                      <div class="footer-contant">
-                          <ul class="contact-list">
-                              <li><i class="fa fa-map-marker"></i>Original Thé et Café Demo Website</li>
-                              <li><i class="fa fa-phone"></i>N° Tél : 01 23 45 67 89</li>
-                              <li><i class="fa fa-envelope-o"></i>Email : contact@OriginalThéCafé.com</li>
-                          </ul>
-                      </div>
-                  </div>
-              </div>
+    <div class="container">
+      <div class="row footer-theme partition-f">
+        <div class="col-lg-3 col-md-3">
+          <div class="footer-title footer-mobile-title">
+            <h4>A propos</h4>
           </div>
+          <div class="footer-contant">
+            <div class="footer-logo">
+              <img src="../assets/images/icon/logo.png" alt="" style="width: 100%;margin-top: -8%;" />
+            </div>
+          </div>
+        </div>
+        <div class="col offset-xl-1">
+          <div class="sub-title">
+            <div class="footer-title">
+              <h4>Nos Guides</h4>
+            </div>
+            <div class="footer-contant">
+              <ul>
+                <li><a href="#">Bien préparer son thé</a></li>
+                <li><a href="#">Un café adapté à vos besoins</a></li>
+                <li><a href="#">Ne pas mélanger les deux ! </a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="sub-title">
+            <div class="footer-title">
+              <h4>Informations</h4>
+            </div>
+            <div class="footer-contant">
+              <ul>
+                <li><a href="#">Envois & Retours</a></li>
+                <li><a href="#">Sécurité des données</a></li>
+                <li><a href="#">Nos producteurs</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="sub-title">
+            <div class="footer-title">
+              <h4>Contact</h4>
+            </div>
+            <div class="footer-contant">
+              <ul class="contact-list">
+                <li>
+                  <i class="fa fa-map-marker"></i>Original Thé et Café Demo
+                  Website
+                </li>
+                <li><i class="fa fa-phone"></i>N° Tél : 01 23 45 67 89</li>
+                <li>
+                  <i class="fa fa-envelope-o"></i>Email :
+                  contact@OriginalThéCafé.com
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
   </section>
   <div class="sub-footer">
-      <div class="container">
-          <div class="row">
-              <div class="col-xl-12 col-md-12 col-sm-12" style="text-align:center">
-                  <div class="footer-end">
-                      <p><i class="fa fa-copyright" aria-hidden="true"></i> 2019 Original Thé et café -  Réveillez vos sens -  Angular HTML by Groupe Original Thé et Café</p>
-                  </div>
-              </div>              
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-12 col-md-12 col-sm-12" style="text-align:center">
+          <div class="footer-end">
+            <p>
+              <i class="fa fa-copyright" aria-hidden="true"></i> 2019 Original
+              Thé et café - Réveillez vos sens - Angular HTML by Groupe Original
+              Thé et Café
+            </p>
           </div>
+        </div>
       </div>
+    </div>
   </div>
 </footer>
 <!-- footer end -->
