--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,6 @@
               </div>
               <div class="col-lg-6 text-right">
                   <ul class="header-dropdown">
-                      <li class="mobile-wishlist"><a href="#"><i class="fa fa-heart" aria-hidden="true"></i></a></li>
                       <li class="onhover-dropdown mobile-account">
                           <i class="fa fa-user" aria-hidden="true"></i> Mon Compte
                           <ul class="onhover-show-div">
@@ -40,22 +39,15 @@
           <div class="col-sm-12">
               <div class="main-menu">
                   <div class="menu-left">
-
-                      <div class="brand-logo">
-                          <a href="index.html"> <img src="../assets/images/icon/logo.png" class="img-fluid lazyload" alt=""></a>
-                      </div>
+                    <div class="brand-logo">
+                      <a href="index.html"> <img src="../assets/images/icon/logo.png" class="img-fluid lazyload" alt="" style="width: 9%;margin-top: -3%;"></a>
+                  </div>
                   </div>
                   <div class="menu-right pull-right">
                       <div>
-                          <nav id="main-nav">
-                              <div class="toggle-nav">
-                                  <i class="fa fa-bars sidebar-bar"></i>
-                              </div>
+                          <nav id="main-nav">                             
                               <!-- Horizontal menu -->
-                              <ul id="main-menu" class="sm pixelstrap sm-horizontal">
-                                  <li>
-                                      <div class="mobile-back text-right">Back<i class="fa fa-angle-right pl-2" aria-hidden="true"></i></div>
-                                  </li>
+                              <ul id="main-menu" class="sm pixelstrap sm-horizontal" style="margin-inline-start: -50%;">                                 
                                   <li>
                                       <a href="#">Accueil</a>
                                   </li>
