>Home, Dashboard, add product

--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -171,7 +171,8 @@ figure {
 
 img {
   vertical-align: middle;
-  border-style: none; }
+  border-style: none;
+  width: 100%}
 
 svg:not(:root) {
   overflow: hidden; }
