--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,1 +1,215 @@
-<p>cart works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="multikart">
+    <meta name="keywords" content="multikart">
+    <meta name="author" content="multikart">
+    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <title>Multikart - Multi-purpopse E-commerce Html Template</title>
+
+    <!--Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+
+    <!--Slick slider css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
+
+    <!-- Animate icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
+
+    <!-- Themify icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+
+    <!-- Theme css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/color1.css" media="screen" id="color">
+
+</head>
+
+<body>
+
+
+<!-- header start -->
+<app-navbar></app-navbar>
+<!-- header end -->
+
+
+<!-- breadcrumb start -->
+<div class="breadcrumb-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="page-title">
+                    <h2>Panier</h2></div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- breadcrumb End -->
+
+
+<!--section start-->
+<section class="cart-section section-b-space">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <table class="table cart-table table-responsive-xs">
+                    <thead>
+                    <tr class="table-head">
+                        <th scope="col">image</th>
+                        <th scope="col">produit</th>
+                        <th scope="col">prix</th>
+                        <th scope="col">quantité</th>
+                        <th scope="col">retirer</th>
+                        <th scope="col">total</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <a href="the-blanc"><img src="../assets/images/the-cafe/The_blanc.jpg" alt=""></a>
+                        </td>
+                        <td class="product-name" data-title="Product"> <a
+                          href="https://themes.muffingroup.com/be/herbal/product/sed-fringilla-tempus/"> <b>Thé
+                          Blanc</b>
+                      </a>
+                      <p>Origine : Chine</p>
+                      <span class="conditioning">
+                          <span class="current-conditioning">250g</span>
+                      </span>
+                            <div class="mobile-cart-content row">
+                                <div class="col-xs-3">
+                                    <div class="qty-box">
+                                        <div class="input-group">
+                                            <input type="text" name="quantity" class="form-control input-number" value="1">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-3">
+                                    <h2 class="td-color">€10,20</h2></div>
+                                <div class="col-xs-3">
+                                    <h2 class="td-color"><a href="#" class="icon"><i class="ti-close"></i></a></h2></div>
+                            </div>
+                        </td>
+                        <td>
+                            <h2>€10,20</h2></td>
+                        <td>
+                            <div class="qty-box">
+                                <div class="input-group">
+                                    <input type="number" name="quantity" class="form-control input-number" value="1">
+                                </div>
+                            </div>
+                        </td>
+                        <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
+                        <td>
+                            <h2 class="td-color">€10,20</h2></td>
+                    </tr>
+                    </tbody>
+                    <tbody>
+                    <tr>
+                        <td>
+                            <a href="cafe-intenso"><img src="../assets/images/the-cafe/cafe_intenso.jpg" alt=""></a>
+                        </td>
+                        <td class="product-name" data-title="Product"> <a
+                          src="images/cafe_intenso.jpg"> <b>Café
+                          arabica</b>
+                      </a>
+                      <p>Origine : Ethiopie</p>
+                      <span class="conditioning">
+                          <span class="current-conditioning">250g</span>
+                      </span>
+
+                  </td>
+                        <td>
+                            <h2>€18.40</h2></td>
+                        <td>
+                            <div class="qty-box">
+                                <div class="input-group">
+                                    <input type="number" name="quantity" class="form-control input-number" value="2">
+                                </div>
+                            </div>
+                        </td>
+                        <td><a href="#" class="icon"><i class="ti-close"></i></a></td>
+                        <td>
+                            <h2 class="td-color">€36,80</h2></td>
+                    </tr>
+                    </tbody>
+
+                </table>
+                <table class="table cart-table table-responsive-md">
+                    <tfoot>
+                    <tr>
+                        <td>Prix total :</td>
+                        <td>
+                            <h2>€47.00</h2></td>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+        <div class="row cart-buttons">
+            <div class="col-6"><a href="#" class="btn btn-solid">Continuer les achats</a></div>
+            <div class="col-6"><a href="#" class="btn btn-solid">Valider la commande</a></div>
+        </div>
+    </div>
+</section>
+<!--section end-->
+
+<app-footer></app-footer>
+
+<!-- theme setting -->
+
+<!--app-theme-setting></app-theme-setting-->
+
+
+<!-- tap to top start -->
+<div class="tap-top">
+    <div><i class="fa fa-angle-double-up"></i></div>
+</div>
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- menu js-->
+<script src="../assets/js/menu.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!-- popper js-->
+<script src="../assets/js/popper.min.js"></script>
+
+<!-- slick js-->
+<script src="../assets/js/slick.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- Bootstrap Notification js-->
+<script src="../assets/js/bootstrap-notify.min.js"></script>
+
+<!-- Theme js-->
+<script src="../assets/js/script.js"></script>
+
+<script>
+    function openSearch() {
+        document.getElementById("search-overlay").style.display = "block";
+    }
+
+    function closeSearch() {
+        document.getElementById("search-overlay").style.display = "none";
+    }
+</script>
+</body>
+
+</html>
