--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,1 +1,203 @@
-<p>checkout works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="multikart">
+    <meta name="keywords" content="multikart">
+    <meta name="author" content="multikart">
+    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <title>Multikart - Multi-purpopse E-commerce Html Template</title>
+
+    <!--Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+
+    <!--Slick slider css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
+
+    <!-- Animate icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
+
+    <!-- Themify icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+
+    <!-- Theme css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/color1.css" media="screen" id="color">
+
+</head>
+
+<body>
+
+
+<!-- header start -->
+<app-navbar></app-navbar>
+
+<!-- section start -->
+<section class="section-b-space">
+    <div class="container">
+        <div class="checkout-page">
+            <div class="checkout-form">
+                <form>
+                    <div class="row">
+                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                            <div class="checkout-title">
+                                <h3>Facturation</h3></div>
+                            <div class="row check-out">
+                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <div class="field-label">Nom</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <div class="field-label">Prénom</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <div class="field-label">Téléphone</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-md-6 col-sm-6 col-xs-12">
+                                    <div class="field-label">Adresse email</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                                    <div class="field-label">Addresse</div>
+                                    <input type="text" name="field-name" value="" placeholder="Street address">
+                                </div>
+                                <div class="form-group col-md-12 col-sm-12 col-xs-12">
+                                    <div class="field-label">Ville</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-md-12 col-sm-6 col-xs-12">
+                                    <div class="field-label">Code postal</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
+                                </div>
+                                <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <input type="checkbox" name="shipping-option" id="account-option"> &ensp;
+                                    <label for="account-option">Créé un compte?</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-sm-12 col-xs-12">
+                            <div class="checkout-details">
+                                <div class="order-box">
+                                    <div class="title-box">
+                                        <div>Produit <span>Total</span></div>
+                                    </div>
+                                    <ul class="qty">
+                                        <li>Thé blanc × 1 <span>€10,20</span></li>
+                                        <li>Café arabica × 2 <span>€36,80</span></li>
+                                    </ul>
+                                    <ul class="sub-total">
+                                        <li>Sous-total <span class="count">€47,00</span></li>
+                                        <li>Livraison
+                                            <div class="shipping">
+                                                <div class="shopping-option">
+                                                    <input type="checkbox" name="free-shipping" id="free-shipping">
+                                                    <label for="free-shipping">Colissimo</label>
+                                                </div>
+                                                <div class="shopping-option">
+                                                    <input type="checkbox" name="local-pickup" id="local-pickup">
+                                                    <label for="local-pickup">Chronopost</label>
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                    <ul class="total">
+                                        <li>Total <span class="count">$49.70</span></li>
+                                    </ul>
+                                </div>
+                                <div class="payment-box">
+                                    <div class="upper-box">
+                                        <div class="payment-options">
+                                            <ul>
+
+                                                <li>
+                                                    <div class="radio-option">
+                                                        <input type="radio" name="payment-group" id="payment-2">
+                                                        <label for="payment-2">Carte bleue</label>
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="radio-option paypal">
+                                                        <input type="radio" name="payment-group" id="payment-3">
+                                                        <label for="payment-3">PayPal<span class="image"><img src="../assets/images/paypal.png" alt=""></span></label>
+                                                    </div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="text-right"><a href="#" class="btn-solid btn">Valider la commande</a></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- section end -->
+
+
+<app-footer></app-footer>
+
+
+<!-- theme setting -->
+<app-theme-setting></app-theme-setting>
+<!-- theme setting -->
+
+
+<!-- tap to top start -->
+<div class="tap-top">
+    <div><i class="fa fa-angle-double-up"></i></div>
+</div>
+<!-- tap to top end -->
+
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- menu js-->
+<script src="../assets/js/menu.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!-- popper js-->
+<script src="../assets/js/popper.min.js"></script>
+
+<!-- slick js-->
+<script src="../assets/js/slick.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- Bootstrap Notification js-->
+<script src="../assets/js/bootstrap-notify.min.js"></script>
+
+<!-- Theme js-->
+<script src="../assets/js/script.js"></script>
+
+<script>
+    function openSearch() {
+        document.getElementById("search-overlay").style.display = "block";
+    }
+
+    function closeSearch() {
+        document.getElementById("search-overlay").style.display = "none";
+    }
+</script>
+
+</body>
+
+</html>
