--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,130 @@
-<p>register works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="multikart">
+    <meta name="keywords" content="multikart">
+    <meta name="author" content="multikart">
+    <link rel="icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/favicon/1.png" type="image/x-icon">
+    <title>Multikart - Multi-purpopse E-commerce Html Template</title>
+
+    <!--Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
+
+    <!-- Icons -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/fontawesome.css">
+
+    <!--Slick slider css-->
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/slick-theme.css">
+
+    <!-- Animate icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css">
+
+    <!-- Themify icon -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/themify-icons.css">
+
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/bootstrap.css">
+
+    <!-- Theme css -->
+    <link rel="stylesheet" type="text/css" href="../assets/css/color1.css" media="screen" id="color">
+
+</head>
+
+<body>
+
+<app-navbar></app-navbar>
+
+
+<!--section start-->
+<section class="register-page section-b-space">
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h3>Créer un compte</h3>
+              <div class="theme-card">
+                  <form class="theme-form">
+                      <div class="form-row">
+                          <div class="col-md-6">
+                              <label for="email">NOM</label>
+                              <input type="text" class="form-control" id="fname" placeholder="Nom" required="">
+                          </div>
+                          <div class="col-md-6">
+                              <label for="review">Prénom</label>
+                              <input type="password" class="form-control" id="lname" placeholder="Prénom" required="">
+                          </div>
+                      </div>
+                      <div class="form-row">
+                          <div class="col-md-6">
+                              <label for="email">email</label>
+                              <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                          </div>
+                          <div class="col-md-6">
+                              <label for="review">Mot de passe</label>
+                              <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
+                          </div><a href="#" class="btn btn-solid">Valider</a></div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
+<!--Section ends-->
+
+
+<!-- footer start -->
+
+<!-- theme setting -->
+<app-theme-setting></app-theme-setting>
+<!-- theme setting -->
+
+
+<!-- tap to top start -->
+<div class="tap-top">
+  <div><i class="fa fa-angle-double-up"></i></div>
+</div>
+<!-- tap to top end -->
+
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- menu js-->
+<script src="../assets/js/menu.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!-- popper js-->
+<script src="../assets/js/popper.min.js"></script>
+
+<!-- slick js-->
+<script src="../assets/js/slick.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- Bootstrap Notification js-->
+<script src="../assets/js/bootstrap-notify.min.js"></script>
+
+<!-- Theme js-->
+<script src="../assets/js/script.js"></script>
+
+<script>
+  function openSearch() {
+      document.getElementById("search-overlay").style.display = "block";
+  }
+
+  function closeSearch() {
+      document.getElementById("search-overlay").style.display = "none";
+  }
+</script>
+
+</body>
+
+</html>
