--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,97 @@
-<p>login works!</p>
+<app-navbar></app-navbar>
+<!-- breadcrumb start -->
+<div class="breadcrumb-section">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="page-title">
+                    <h2>Connection client</h2></div>
+            </div>
+            <div class="col-sm-6">
+                <nav aria-label="breadcrumb" class="theme-breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Accueil</a></li>
+                        <li class="breadcrumb-item active">Se connecter</li>
+                    </ol>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- breadcrumb End -->
+
+
+<!--section start-->
+<section class="login-page section-b-space">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <h3>Login</h3>
+                <div class="theme-card">
+                    <form class="theme-form">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="text" class="form-control" id="email" placeholder="Email" required="">
+                        </div>
+                        <div class="form-group">
+                            <label for="review">Mot De Passe</label>
+                            <input type="password" class="form-control" id="review" placeholder="Enter your password" required="">
+                        </div><a href="#" class="btn btn-solid">Se Connecter</a></form>
+                </div>
+            </div>
+            <div class="col-lg-6 right-login">
+                <h3>Nouveau Client</h3>
+                <div class="theme-card authentication-right">
+                    <h6 class="title-font">Créer un nouveau compte</h6>
+                    <p>Créez un nouveau compte dans notre échoppe ! La création de compte est rapide et facile. Cela vous permet  Cela vous permet de commander chez nous</p>
+                    <a href="#" class="btn btn-solid">Créer un nouveau compte</a></div>
+            </div>
+        </div>
+    </div>
+</section>
+<!--Section ends-->
+
+<app-footer></app-footer>
+
+<app-theme-setting></app-theme-setting>
+
+<!-- tap to top start -->
+<div class="tap-top">
+    <div><i class="fa fa-angle-double-up"></i></div>
+</div>
+<!-- tap to top end -->
+
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- menu js-->
+<script src="../assets/js/menu.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!-- popper js-->
+<script src="../assets/js/popper.min.js"></script>
+
+<!-- slick js-->
+<script src="../assets/js/slick.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- Bootstrap Notification js-->
+<script src="../assets/js/bootstrap-notify.min.js"></script>
+
+<!-- Theme js-->
+<script src="../assets/js/script.js"></script>
+
+<script>
+    function openSearch() {
+        document.getElementById("search-overlay").style.display = "block";
+    }
+
+    function closeSearch() {
+        document.getElementById("search-overlay").style.display = "none";
+    }
+</script>
