--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,8 +35,8 @@
                         </div>
                         <div class="form-group">
                             <label for="review">Mot De Passe</label>
-                            <input type="password" class="form-control" id="review" placeholder="Enter your password" required="">
-                        </div><a href="#" class="btn btn-solid">Se Connecter</a></form>
+                            <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
+                        </div><a href="#" class="btn btn-solid" style="margin-left: 36%;">Se Connecter</a></form>
                 </div>
             </div>
             <div class="col-lg-6 right-login">
@@ -44,7 +44,7 @@
                 <div class="theme-card authentication-right">
                     <h6 class="title-font">Créer un nouveau compte</h6>
                     <p>Créez un nouveau compte dans notre échoppe ! La création de compte est rapide et facile. Cela vous permet  Cela vous permet de commander chez nous</p>
-                    <a href="#" class="btn btn-solid">Créer un nouveau compte</a></div>
+                    <a href="#" class="btn btn-solid" style="margin-top: 16%;margin-left: 26%;">Créer un nouveau compte</a></div>
             </div>
         </div>
     </div>
