--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -45,15 +45,15 @@
                   </div>
                   <div class="menu-right pull-right">
                       <div>
-                          <nav id="main-nav">                             
+                          <nav id="main-nav">
                               <!-- Horizontal menu -->
-                              <ul id="main-menu" class="sm pixelstrap sm-horizontal" style="margin-inline-start: -50%;">                                 
+                              <ul id="main-menu" class="sm pixelstrap sm-horizontal" style="margin-inline-start: -50%;">
                                   <li>
-                                      <a href="#">Accueil</a>
+                                      <a href="index.html">Accueil</a>
                                   </li>
 
                                   <li>
-                                      <a href="#">Nos Produits</a>
+                                      <a href="/category-page">Nos Produits</a>
                                   </li>
 
                                   <li>
@@ -100,7 +100,7 @@
                                           </li>
                                           <li>
                                               <div class="buttons">
-                                                  <a href="cart.html" class="view-cart">view cart</a>
+                                                  <a href="/cart" class="view-cart">view cart</a>
                                                   <a href="#" class="checkout">checkout</a>
                                               </div>
                                           </li>
