--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -70,8 +70,8 @@
                                     <input type="text" name="field-name" value="" placeholder="">
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
-                                    <div class="field-label">Addresse</div>
-                                    <input type="text" name="field-name" value="" placeholder="Street address">
+                                    <div class="field-label">Adresse</div>
+                                    <input type="text" name="field-name" value="" placeholder="">
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Ville</div>
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="form-group col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                     <input type="checkbox" name="shipping-option" id="account-option"> &ensp;
-                                    <label for="account-option">Créé un compte?</label>
+                                    <label for="account-option">Créer un compte?</label>
                                 </div>
                             </div>
                         </div>
@@ -94,11 +94,11 @@
                                         <div>Produit <span>Total</span></div>
                                     </div>
                                     <ul class="qty">
-                                        <li>Thé blanc × 1 <span>€10,20</span></li>
-                                        <li>Café arabica × 2 <span>€36,80</span></li>
+                                        <li>Thé blanc × 1 <span>10,20€</span></li>
+                                        <li>Café arabica × 2 <span>36,80€</span></li>
                                     </ul>
                                     <ul class="sub-total">
-                                        <li>Sous-total <span class="count">€47,00</span></li>
+                                        <li>Sous-total <span class="count">47,00€</span></li>
                                         <li>Livraison
                                             <div class="shipping">
                                                 <div class="shopping-option">
@@ -113,7 +113,7 @@
                                         </li>
                                     </ul>
                                     <ul class="total">
-                                        <li>Total <span class="count">$49.70</span></li>
+                                        <li>Total <span class="count">49.70€</span></li>
                                     </ul>
                                 </div>
                                 <div class="payment-box">
