Tests liens BDD

--- a/src/app/category-page/category-page.component.html
+++ b/src/app/category-page/category-page.component.html
@@ -1,5 +1,6 @@
 
 <app-navbar></app-navbar>
+
 <!-- breadcrumb start -->
 <div class="breadcrumb-section">
   <div class="container">
@@ -408,9 +409,7 @@
 </section>
 <!-- section End -->
 
-<app-footer></app-footer>
-
-<app-theme-setting></app-theme-setting>
+<div>################ {{ products }} '------'</div>
 
 <!-- tap to top start -->
 <div class="tap-top">
