--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -83,8 +83,7 @@
                 </li>
                 <li><i class="fa fa-phone"></i>N° Tél : 01 23 45 67 89</li>
                 <li>
-                  <i class="fa fa-envelope-o"></i>Email :
-                  contact@OriginalThéCafé.com
+                  <i class="fa fa-envelope-o"></i>Email : contact@OriginalThéCafé.com
                 </li>
               </ul>
             </div>
