--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -71,7 +71,7 @@
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Addresse</div>
-                                    <input type="text" name="field-name" value="" placeholder="Street address">
+                                    <input type="text" name="field-name" value="" placeholder="">
                                 </div>
                                 <div class="form-group col-md-12 col-sm-12 col-xs-12">
                                     <div class="field-label">Ville</div>
