--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -188,7 +188,7 @@
                   <div class="product-2 product-m no-arrow">
                       <div class="product-box product-wrap col-lg-4">
                           <div class="img-wrapper">
-                              <div class="ribbon"><span>sale</span></div>
+                              <div class="ribbon"><span>remise</span></div>
                               <div class="front">
                                   <a href="product-page(no-sidebar).html"><img alt="" src="../assets/images/marijuana/pro/21.jpg"  ></a>
                               </div>
