--- a/src/app/admin-index/admin-index.component.html
+++ b/src/app/admin-index/admin-index.component.html
@@ -10,38 +10,12 @@
 
       <!-- Page Sidebar Start-->
          <div class="page-sidebar">
-            <!-- <div class="main-header-left d-none d-lg-block">
-                <div class="logo-wrapper"><a href="index.html"><img class="blur-up lazyloaded" src="../assets/images/dashboard/multikart-logo.png" alt=""></a></div>
-            </div>
-            <div class="sidebar custom-scrollbar">
-                <div class="sidebar-user text-center">
-                    <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.png" alt="#">
-                    </div>
-                    <h6 class="mt-3 f-14">JOHN</h6>
-                    <p>general manager.</p>
-                </div>
-                <ul class="sidebar-menu">
-                    <li><a class="sidebar-header" href="index.html"><i data-feather="home"></i><span>Dashboard</span></a></li>
-                    <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Gestion des produits</span><i class="fa fa-angle-right pull-right"></i></a>
-                    </li>
-                    <li><a class="sidebar-header" href=""><i data-feather="dollar-sign"></i><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a>
-                    </li>
-                    <li><a class="sidebar-header" href="#"><i data-feather="clipboard"></i><span>Gestion des clients</span><i class="fa fa-angle-right pull-right"></i></a>
-                    </li>
-                    <li><a class="sidebar-header" href="media.html"><i data-feather="camera"></i><span>Media</span></a></li>
-                </ul>
-            </div> -->
-
           <app-admin-sidebar></app-admin-sidebar>
         </div>
-
-
-
-
         <!-- Page Sidebar Ends-->
 
         <!-- Right sidebar Start-->
-        <div class="right-sidebar" id="right_side_bar">
+<!--         <div class="right-sidebar" id="right_side_bar">
             <div>
                 <div class="container p-0">
                     <div class="modal-header p-l-20 p-r-20">
@@ -112,7 +86,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Right sidebar Ends-->
 
         <div class="page-body">
