--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -11,11 +11,13 @@
         </div>
         <ul class="sidebar-menu">
             <li><a class="sidebar-header" href="index.html"><i data-feather="home"></i><span>Dashboard</span></a></li>
-            <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Gestion des produits</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Ajouter un produit</span><i class="fa fa-angle-right pull-right"></i></a>
+            </li>
+            <li><a class="sidebar-header" href="#"><i data-feather="box"></i> <span>Liste des produits</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
             <li><a class="sidebar-header" href=""><i data-feather="dollar-sign"></i><span>Commandes</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
-            <li><a class="sidebar-header" href="#"><i data-feather="clipboard"></i><span>Gestion des clients</span><i class="fa fa-angle-right pull-right"></i></a>
+            <li><a class="sidebar-header" href="#"><i data-feather="clipboard"></i><span>Liste Utilisateurs</span><i class="fa fa-angle-right pull-right"></i></a>
             </li>
             <li><a class="sidebar-header" href="media.html"><i data-feather="camera"></i><span>Blog</span></a></li>
         </ul>
