--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -1,1 +1,105 @@
-<p>user-list works!</p>
+<!-- page-wrapper Start-->
+<div class="page-wrapper">
+
+    <!-- Page Header Start-->
+    <app-admin-header></app-admin-header>
+    <!-- Page Header Ends -->
+
+    <!-- Page Body Start-->
+    <div class="page-body-wrapper">
+
+        <!-- Page Sidebar Start-->
+        <div class="page-sidebar">
+          <app-admin-sidebar></app-admin-sidebar>
+        </div>
+        <!-- Page Sidebar Ends-->
+
+        <!-- Right sidebar Start-->
+        <!-- Right sidebar Ends-->
+
+        <div class="page-body">
+
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+                <div class="page-header">
+                    <div class="row">
+                        <div class="col-lg-6">
+                            <div class="page-header-left">
+                                <h3>Liste d'Utilisateurs
+                                    <small>Thé & Café dashboard admin</small>
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Container-fluid Ends-->
+
+            <!-- Container-fluid starts-->
+            <div class="container-fluid">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>Liste d'Utilisateurs</h5>
+                    </div>
+                    <div class="card-body">
+                        <div class="btn-popup pull-right">
+                            <a href="add-user.html" class="btn btn-secondary">Créer un Utilisateur</a>
+                        </div>
+                        <div id="batchDelete" class="category-table user-list order-table"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- Container-fluid Ends-->
+
+        </div>
+
+        <!-- footer start-->
+        <footer class="footer">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-6 footer-copyright">
+                        <p class="mb-0">Copyright 2019 © Multikart All rights reserved.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <p class="pull-right mb-0">Hand crafted & made with<i class="fa fa-heart"></i></p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- footer end-->
+    </div>
+
+</div>
+
+<!-- latest jquery-->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+
+<!-- Bootstrap js-->
+<script src="../assets/js/popper.min.js"></script>
+<script src="../assets/js/bootstrap.js"></script>
+
+<!-- feather icon js-->
+<script src="../assets/js/icons/feather-icon/feather.min.js"></script>
+<script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+
+<!-- Sidebar jquery-->
+<script src="../assets/js/sidebar-menu.js"></script>
+
+<!-- Jsgrid js-->
+<script src="../assets/js/jsgrid/jsgrid.min.js"></script>
+<script src="../assets/js/jsgrid/griddata-users.js"></script>
+<script src="../assets/js/jsgrid/jsgrid-users.js"></script>
+
+<!--Customizer admin-->
+<script src="../assets/js/admin-customizer.js"></script>
+
+<!-- lazyload js-->
+<script src="../assets/js/lazysizes.min.js"></script>
+
+<!--right sidebar js-->
+<script src="../assets/js/chat-menu.js"></script>
+
+<!--script admin-->
+<script src="../assets/js/admin-script.js"></script>
+
+
