Modif Liste Commande + Pages admin

--- a/src/app/admin-header/admin-header.component.html
+++ b/src/app/admin-header/admin-header.component.html
@@ -21,16 +21,16 @@
                 <li class="onhover-dropdown"><a class="txt-dark" href="#">
                     <h6>FR</h6></a>
                     <ul class="language-dropdown onhover-show-div p-20">
-                        <li><a href="#" data-lng="fr"><i class="flag-icon flag-icon-nz"></i> French</a></li>
+                        <li><a href="#" data-lng="fr"><i class="flag-icon flag-icon-fr"></i> Français</a></li>
                     </ul>
                 </li>
               <li class="onhover-dropdown">
-                    <div class="media align-items-center"><img class="align-self-center pull-right img-50 rounded-circle blur-up lazyloaded" src="../assets/images/dashboard/man.png" alt="header-user">
+                    <div class="media align-items-center"><img class="align-self-center pull-right img-50 rounded-circle blur-up lazyloaded" src="../assets/images/dashboard/man.jpg" alt="header-user">
                         <div class="dotted-animation"><span class="animate-circle"></span><span class="main-circle"></span></div>
                     </div>
                     <ul class="profile-dropdown onhover-show-div p-20 profile-dropdown-hover">
-                        <li><a href="#"><i data-feather="user"></i>Edit Profile</a></li>
-                        <li><a href="#"><i data-feather="log-out"></i>Logout</a></li>
+                        <li><a href="#"><i data-feather="user"></i>Modifier le profil</a></li>
+                        <li><a href="#"><i data-feather="log-out"></i>Se déconnecter</a></li>
                     </ul>
                 </li>
             </ul>
