--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -26,7 +26,7 @@
                         <div class="col-lg-6">
                             <div class="page-header-left">
                                 <h3>Liste d'Utilisateurs
-                                    <small>Thé & Café dashboard admin</small>
+                                    <small>Original Thé & Café dashboard admin</small>
                                 </h3>
                             </div>
                         </div>
@@ -58,11 +58,10 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 footer-copyright">
-                        <p class="mb-0">Copyright 2019 © Multikart All rights reserved.</p>
-                    </div>
-                    <div class="col-md-6">
-                        <p class="pull-right mb-0">Hand crafted & made with<i class="fa fa-heart"></i></p>
-                    </div>
+                        <p class="mb-0">2019 Original
+                          Thé et café - Réveillez vos sens - Angular HTML by Groupe Original
+                          Thé et Café</p>
+                    </div>                  
                 </div>
             </div>
         </footer>
