--- a/src/app/admin-index/admin-index.component.html
+++ b/src/app/admin-index/admin-index.component.html
@@ -98,7 +98,7 @@
                         <div class="col-lg-6">
                             <div class="page-header-left">
                                 <h3>Dashboard
-                                    <small>Panneau d'administrateur Thé & Café</small>
+                                    <small>Panneau d'administrateur Original Thé & Café</small>
                                 </h3>
                             </div>
                         </div>
@@ -119,7 +119,7 @@
                     <div class="col-xl-3 col-md-6 xl-50">
                         <div class="card order-graph sales-carousel">
                             <div class="card-header">
-                                <h6>Total Sales</h6>
+                                <h6>Ventes Totales</h6>
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="small-chartjs">
@@ -136,10 +136,10 @@
                             <div class="card-body">
                                 <div class="media">
                                     <div class="media-body">
-                                        <span>Sales Last Month</span>
+                                        <span>Ventes du Mois Dernier</span>
                                         <h2 class="mb-0">9054</h2>
                                         <p>0.25% <span><i class="fa fa-angle-up"></i></span></p>
-                                        <h5 class="f-w-600">Gross sales of August</h5>
+                                        <h5 class="f-w-600">Ventes brut d'Octobre</h5>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
                                     </div>
                                     <div class="bg-primary b-r-8">
@@ -154,7 +154,7 @@
                     <div class="col-xl-3 col-md-6 xl-50">
                         <div class="card order-graph sales-carousel">
                             <div class="card-header">
-                                <h6>Total purchase</h6>
+                                <h6>Achats totaux</h6>
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="small-chartjs">
@@ -171,10 +171,10 @@
                             <div class="card-body">
                                 <div class="media">
                                     <div class="media-body">
-                                        <span>Monthly purchase</span>
+                                        <span>Achats Mensuels</span>
                                         <h2 class="mb-0">2154</h2>
                                         <p>0.13% <span><i class="fa fa-angle-up"></i></span></p>
-                                        <h5 class="f-w-600">Avg Gross purchase</h5>
+                                        <h5 class="f-w-600">Ventes brutes</h5>
                                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting</p>
                                     </div>
                                     <div class="bg-secondary b-r-8">
@@ -189,7 +189,7 @@
                     <div class="col-xl-3 col-md-6 xl-50">
                         <div class="card order-graph sales-carousel">
                             <div class="card-header">
-                                <h6>Total cash transaction</h6>
+                                <h6>Total des transactions</h6>
                                 <div class="row">
                                     <div class="col-6">
                                         <div class="small-chartjs">
@@ -259,7 +259,7 @@
                     <div class="col-xl-6 xl-100">
                         <div class="card">
                             <div class="card-header">
-                                <h5>Latest Orders</h5>
+                                <h5>Dernieres Commandes</h5>
                                 <div class="card-header-right">
                                     <ul class="list-unstyled card-option">
                                         <li><i class="icofont icofont-simple-left"></i></li>
@@ -276,42 +276,42 @@
                                     <table class="table table-bordernone">
                                         <thead>
                                         <tr>
-                                            <th scope="col">Order ID</th>
-                                            <th scope="col">Order Total</th>
-                                            <th scope="col">Payment Method</th>
+                                            <th scope="col">Id de la commande</th>
+                                            <th scope="col">Total de la commande</th>
+                                            <th scope="col">Méthode de paiement</th>
                                             <th scope="col">Status</th>
                                         </tr>
                                         </thead>
                                         <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td class="digits">$120.00</td>
-                                            <td class="font-danger">Bank Transfers</td>
-                                            <td class="digits">On Way</td>
+                                            <td class="digits">€120.00</td>
+                                            <td class="font-secondary">Bank Transfers</td>
+                                            <td class="digits">En cours d'acheminement</td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td class="digits">$90.00</td>
+                                            <td class="digits">€90.00</td>
                                             <td class="font-secondary">Ewallets</td>
-                                            <td class="digits">Delivered</td>
+                                            <td class="digits">Livré</td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td class="digits">$240.00</td>
-                                            <td class="font-warning">Cash</td>
-                                            <td class="digits">Delivered</td>
+                                            <td class="digits">€240.00</td>
+                                            <td class="font-danger">Cash</td>
+                                            <td class="digits">Livré</td>
                                         </tr>
                                         <tr>
                                             <td>4</td>
-                                            <td class="digits">$120.00</td>
-                                            <td class="font-primary">Direct Deposit</td>
-                                            <td class="digits">$6523</td>
+                                            <td class="digits">€120.00</td>
+                                            <td class="font-warning">Direct Deposit</td>
+                                            <td class="digits">En préparation</td>
                                         </tr>
                                         <tr>
                                             <td>5</td>
-                                            <td class="digits">$50.00</td>
+                                            <td class="digits">€50.00</td>
                                             <td class="font-primary">Bank Transfers</td>
-                                            <td class="digits">Delivered</td>
+                                            <td class="digits">Livré</td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -542,7 +542,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 footer-copyright">
-                        <p class="mb-0">Copyright 2019 © THE & CAFE All rights reserved.</p>
+                        <p class="mb-0">2019 Original
+                          Thé et café - Réveillez vos sens - Angular HTML by Groupe Original
+                          Thé et Café</p>
                     </div>
                     <div class="col-md-6">
                         <p class="pull-right mb-0"><i class="fa fa-heart"></i></p>
