--- a/src/app/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/admin-sidebar/admin-sidebar.component.html
@@ -4,10 +4,10 @@
     </div>
     <div class="sidebar custom-scrollbar">
         <div class="sidebar-user text-center">
-            <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.png" alt="#">
+            <div><img class="img-60 rounded-circle lazyloaded blur-up" src="../assets/images/dashboard/man.jpg" alt="#">
             </div>
-            <h6 class="mt-3 f-14">JOHN</h6>
-            <p>general manager.</p>
+            <h6 class="mt-3 f-14">John Doe</h6>
+            <p>Administrateur</p>
         </div>
         <ul class="sidebar-menu">
             <li><a class="sidebar-header" href="index.html"><i data-feather="home"></i><span>Dashboard</span></a></li>
