--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,7 +13,7 @@
                             <input type="text" class="form-control" id="email" placeholder="Email" required="">
                         </div>
                         <div class="form-group">
-                            <label for="review">Mot De Passe</label>
+                            <label for="review">Mot de passe</label>
                             <input type="password" class="form-control" id="review" placeholder="Entrez votre mot de passe" required="">
                         </div><a href="#" class="btn btn-solid" style="margin-left: 36%;">Se Connecter</a></form>
                 </div>
